--- a/config/locales/zh_CN.yml
+++ b/config/locales/zh_CN.yml
@@ -4,3 +4,9 @@ zh_CN:
     require_permission: "您没有根据执行此操作"
   common:
     login_success: "登录成功"
+    create_success: "创建成功"
+    update_success: "修改成功"
+    save: "保存"
+    edit: "编辑"
+    published_at: "发布于"
+    back: "返回"
