--- a/config/locales/activerecord.zh_CN.yml
+++ b/config/locales/activerecord.zh_CN.yml
@@ -10,3 +10,8 @@ zh_CN:
               blank: "描述不能为空"
             status:
               blank: "状态不能为空"
+    attributes:
+      team:
+        name: '团队名称'
+        description: '团队宣言'
+        avatar_url: '团队标志'
