--- a/config/locales/zh_CN.yml
+++ b/config/locales/zh_CN.yml
@@ -6,7 +6,11 @@ zh_CN:
     login_success: "登录成功"
     create_success: "创建成功"
     update_success: "修改成功"
+    destroy_success: "删除成功"
     save: "保存"
     edit: "编辑"
     published_at: "发布于"
     back: "返回"
+    new: "新建"
+    destroy: '删除'
+    destroy_confirm: '删除是一种危险的操作，确认？'
